build: use new dependency IDs